Update build.sbt to compile with java 22